tests/baselines/reference/es6ClassTest3.errors.txt
es6ClassTest3.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== es6ClassTest3.ts (1 errors) ====
    module M {	
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	class Visibility {
    	    public foo() { };
    	    private bar() { };
            private x: number;
    	    public y: number;
    	    public z: number;
    
    	    constructor() {
    	        this.x = 1;
    	        this.y = 2;
    	    }
    	}
    }